migrate functional tests to junit 5